# hellebore

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  stylelint.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.setup.mjs
.husky/: pre-commit
docs/database/: language.plantuml  person.plantuml
docs/development/: troubleshooting.md
docs/model/: entry.puml  folder.puml
scripts/: generate_icons.bat  generate_icons.sh
src/: App.css  App.tsx  app.tsx  constants.ts  global.css  main.ts  main.tsx  shell.tsx  state.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: article.rs  entry.rs  folder.rs  language.rs  lib.rs  person.rs  prelude.rs  project.rs  word.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml  README.md
src-tauri/migration/src/: lib.rs  rev0.rs  rev1.rs
src-tauri/migration/src/init/: article.rs  entry.rs  folder.rs  language.rs  mod.rs  person.rs  project.rs  word.rs
src-tauri/src/: app.rs  constants.rs  errors.rs  lib.rs  main.rs  settings.rs  state.rs  types.rs  util.rs  utils.rs
src-tauri/src/api/: article.rs  data.rs  entry.rs  errors.rs  folder.rs  language.rs  mod.rs  person.rs  project.rs  session.rs  utils.rs  word.rs
src-tauri/src/database/: article_manager.rs  database_manager.rs  entry_manager.rs  file_manager.rs  folder_manager.rs  language_manager.rs  mod.rs  person_manager.rs  project_manager.rs  setup.rs  transaction_manager.rs  util.rs  utils.rs  word_manager.rs
src-tauri/src/model/: config.rs  mod.rs  project.rs  state.rs  text.rs
src-tauri/src/model/errors/: api_error.rs  error.rs  mod.rs  text_error.rs
src-tauri/src/model/errors/builders/: attribute_error_builder.rs  database_error_builder.rs  entity_error_builder.rs  entry_error_builder.rs  error_builder.rs  mod.rs  project_error_builder.rs
src-tauri/src/schema/: article.rs  common.rs  config.rs  data.rs  diagnostic.rs  entity.rs  entry.rs  file.rs  folder.rs  language.rs  mod.rs  person.rs  project.rs  response.rs  session.rs  update.rs  word.rs
src-tauri/src/services/: article.rs  article_service.rs  config_service.rs  data_service.rs  entry_service.rs  entry_text_service.rs  file_service.rs  folder_service.rs  language.rs  language_service.rs  mod.rs  person_service.rs  project_service.rs  session_service.rs  settings_service.rs  word_service.rs
src-tauri/src/types/: entity.rs  grammar.rs  mod.rs
src-tauri/tests/: language.rs  lib.rs
src-tauri/tests/fixtures/: config.rs  entry.rs  folder.rs  language.rs  mod.rs  person.rs  project.rs  word.rs
src-tauri/tests/services/: article.rs  config.rs  entry.rs  folder.rs  language.rs  mod.rs  person.rs  project.rs  word.rs
src-tauri/tests/services/entry/: create_entry.rs  delete_entry.rs  get_entry.rs  mod.rs  search_entry.rs  sync_entry_text.rs  update_entry.rs
src-tauri/tests/utils/: db.rs  entry.rs  mod.rs  query.rs  validation.rs  word.rs
src/api/: index.ts
src/client/: client.tsx  index.ts  state.ts
src/components/: App.svelte  app.css  client.service.ts  index.ts
src/constants/: client.ts  entity.ts  field.ts  folder.ts  index.ts  menu.ts  person.ts
src/domain/: index.ts
src/interface/: common.ts  component-service.ts  hook.ts  index.ts  property.ts  props.ts  result.ts  ui.ts  word.ts
src/lib/: App.tsx  app.css  app.tsx  constants.ts  context-menu.tsx  (+1 more)
(+1314 files in other folders)
