[package]
name = "hellebore"
version = "0.0.0"
description = "Self-hosted rust app for world-building."
authors = ["Ariel Boucheikhchoukh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "^1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid", "with-json"] }
tauri = { version = "2", features = ["devtools"] }
tokio = { version = "^1.42.0", features = ["full"] }
uuid = { version = "^1.10.0", features = ["v4"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde_repr = "0.1.19"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
sea-orm-cli = "^1.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
