[package]
name = "hellebore"
version = "0.0.0"
description = "Self-hosted desktop app for world-building."
authors = ["Ariel Boucheikhchoukh"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
sea-orm = { version = "^1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid", "with-json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "^0.1"
strum = "^0"
strum_macros = "^0"
tauri = { version = "^2", features = ["devtools"] }
tauri-plugin-shell = "^2"
tauri-plugin-dialog = "^2"
tokio = { version = "^1", features = ["full"] }
uuid = { version = "^1", features = ["v4"] }
futures = "0.3.31"

[dev-dependencies]
rstest = "^0"
sea-orm-cli = "^1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
